# aideen

./: .clang-tidy  CMakeLists.txt  README.md  aideen.c  aideen.h  main.c  matrix.c  matrix.h  status.h  version.c
aideen/: main.py
physics/: physics.py  rotation.py  test_physics.py  translation.py
src/: main.c  version.c  version.h.in
